# kanka_mcp

./: README.md  kanka-mcp-server.service  nginx-kanka-mcp.conf  pyproject.toml  setup.py
docs/superpowers/plans/: 2026-03-30-kanka-mcp-server.md
docs/superpowers/specs/: 2026-03-30-kanka-mcp-server-design.md
kanka_mcp_server/: __init__.py  __main__.py  client.py  server.py
kanka_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_client.py  test_packaging_compat.py  test_tools.py
