[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kanka-mcp-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn>=0.27",
]

[project.scripts]
kanka-mcp-server = "kanka_mcp_server.__main__:main"
